--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-	<link rel="stylesheet" href="css/ropr.css" type="text/css" charset="utf-8" />
+	<link rel="stylesheet" href="css/mopr.css" type="text/css" charset="utf-8" />
     	<!--<link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">-->
 	
     	<title>Manley's Web Terminal</title>
