--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" charset="utf-8" src="defaultjs/basic.js"></script><!-- Thanks to Joshua Bell -->
     <script type="text/javascript" charset="utf-8" src="defaultjs/os.js"></script>
     <script type="text/javascript" charset="utf-8" src="defaultjs/shell.js"></script>
-    <script type="text/javascript" charset="utf-8" src="defaultjs/ropr.js"></script>
+    <script type="text/javascript" charset="utf-8" src="defaultjs/mopr.js"></script>
     <div class="admin"></div>
 </head>
 <body>
