--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     	<script type="text/javascript" charset="utf-8" src="defaultjs/os.js"></script>
     	<script type="text/javascript" charset="utf-8" src="defaultjs/shell.js"></script>
     	<script type="text/javascript" charset="utf-8" src="defaultjs/mopr.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159646698-1"></script>
+	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+ 		gtag('js', new Date());
+
+  		gtag('config', 'UA-159646698-1');
+	</script>
     <div class="admin"></div>
 </head>
 	
